# ten-cent-poker-client

./: .gitignore  Cargo.toml  KNOWN_ISSUES.md  README.md  verify.sh
app/: Cargo.toml
app/src/: gui_state.rs  lib.rs  main.rs  ui.rs
app/src/freeplay/: cards.rs  conn.rs  mod.rs  model.rs  project.rs  theme.rs  widgets.rs
app/src/freeplay/components/: action_bar.rs  felt.rs  host_rail.rs  join.rs  leave_modal.rs  menu.rs  mod.rs  seat.rs  slideover.rs  tile.rs  titlebar.rs  toolbar.rs
app/src/freeplay/screens/: grid.rs  host.rs  mod.rs
app/tests/: freeplay_lifecycle.rs
core/: Cargo.toml
core/src/: lib.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
deal/: Cargo.toml
deal/src/: distributed.rs  lib.rs  mental.rs
deal/tests/: tamper.rs
game/: Cargo.toml
game/src/: betting.rs  hand.rs  hand_eval.rs  lib.rs  pot.rs  showdown.rs
game/tests/: betting_and_sidepots.rs  hand_eval_vectors.rs
net/: Cargo.toml
net/src/: behaviour.rs  lib.rs  node.rs  reachability.rs
net/tests/: deal_request_response.rs  reachability.rs  smoke.rs  two_node_connect.rs
protocol/: Cargo.toml
protocol/src/: bot.rs  driver.rs  lib.rs  mental.rs  table.rs
protocol/src/table/: tests.rs
protocol/tests/: anti_cheat.rs  mental_cheat_rejected.rs  networked_hand.rs  two_peer_game.rs
wallet/: Cargo.toml
wallet/src/: lib.rs
